...
    <fragment
        android:id="@+id/bidderListFragment"
        android:name="com.github.xwanlion.lifeauctioneer.view.BidderListFragment"
        android:label="BidderListFragment" >
        <action
            android:id="@+id/action_bidderListFragment_to_bidderAddingFragment"
            app:destination="@id/bidderAddingFragment" />
        <action
            android:id="@+id/action_bidderListFragment_to_auctionLotListFragment"
            app:destination="@id/auctionLotListFragment" />
    </fragment>
    <fragment
        android:id="@+id/bidderAddingFragment"
...
