<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyo_bidder_list_item"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginLeft="@dimen/dp_margin_default_value"
    android:layout_marginTop="@dimen/dp_margin_default_value"
    android:layout_marginRight="@dimen/dp_margin_default_value"
    android:background="@drawable/sh_list_item_border_radius">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline601"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyo_bidder_list_item_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline601"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/lbl_bidder_list_item_start_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/lbl_bidder_list_item_bidder_name"
            android:textSize="38sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.673"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyo_bidder_list_item_menus"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline601"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lyo_bidder_list_item_panel"
        android:background="@drawable/sh_list_item_optional_border_radius">

        <ImageButton
            android:id="@+id/btn_bidder_list_item_del"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/sh_del_list_item_radius"
            android:contentDescription="@string/btn_bidder_list_item_del_tips"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_clear_white_24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>